Fix the attention indicator.

It wasn't showing up for dialogs on background tabs (broken in
r520759). This fixes that and adds a test.

BUG=860185

Signed-off-by: Avi Drissman <avi@chromium.org>
Change-Id: I70ddec77e987dff727a5189e810aad5c3fc589de
Reviewed-on: https://chromium-review.googlesource.com/1147705
Reviewed-by: Robert Liao <robliao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577966}
Former-commit-id: d628738348dd00a8bd8ea5384ed58003d3fe5f6c